hcloud-cluster01/5etools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 5etools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: 5etools
  replicas: 1 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 5etools
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: false
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: 5etools
        image: ghcr.io/5etools-mirror-3/5etools-src:1.210.4
        ports:
          - containerPort: 80
            name: http
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
