hcloud-cluster01/5etools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 5etools
spec:
  selector:
    app.kubernetes.io/name: 5etools
  ports:
  - name: 5etools
    protocol: TCP
    port: 80
    targetPort: http
