hcloud-cluster01/5etools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 5etools
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
